[fix] spacing

--- a/css/alfa-style.css
+++ b/css/alfa-style.css
@@ -49,6 +49,9 @@ input[type=radio]:focus,
 .alfa-navbar .navbar-brand img{
     width: 100px;
 }
+.alfa-navbar .navbar-nav .nav-item.active{
+    border-bottom: 2px solid #333;
+}
 .alfa-navbar .navbar-nav .nav-link {
     font-family: 'Lato', sans-serif;
     font-size: 14px;
@@ -375,7 +378,7 @@ input[type=radio]:focus,
 /*listen test speech test*/
 .alfa-listen-test-card,
 .alfa-speech-test-card{
-    margin-top: 30px;
+    margin-top: 24px;
     text-align: center;
     display: block;
     padding: 0 16px 16px;
@@ -1121,25 +1124,27 @@ p.alfa-test-card-bottom-content{
 }
 .alfa-PT-header .alfa-PT-header-left{}
 .alfa-PT-header .alfa-PT-header-left img{
-    max-width: 64px; 
+    max-width: 52px; 
     margin-right: 20px;
     float: left;
 }
 .alfa-PT-header .alfa-PT-header-left h1{
-    font-size: 28px;
+    font-size: 22px;
     text-transform: uppercase;
     color: #ec935f;
     font-weight: 700; 
     margin-bottom: 0;
     vertical-align: middle; 
-    margin-top: 16px;
+    margin-top: 13px;
     float: left;
 }
-.alfa-PT-header .alfa-PT-header-right{}
+.alfa-PT-header .alfa-PT-header-right a:hover{
+    text-decoration: none;
+}
 .alfa-PT-header .alfa-PT-header-right a img{
     width: 46px;
-    max-width: 46px;
-    margin-top: 9px;
+    max-width: 40px;
+    margin-top: 7px;
 }
 .alfa-PT-Examination-card {
     border-radius: 10px;
@@ -1192,10 +1197,10 @@ p.alfa-test-card-bottom-content{
     padding-bottom: 4px;
 }
 .alfa-PT-E-main-para{
-    margin-top: 20px;
+    margin-top: 10px;
     padding: 12px 18px;
     box-shadow: 0 0 .25rem rgba(0,0,0,.075)!important;
-    font-size: 20px;
+    font-size: 18px;
     line-height: 1.8;
 }
 .alfa-PT-E-main-para i{
@@ -1720,6 +1725,11 @@ p.alfa-test-card-bottom-content{
 }
 .alfa-sidebar-main-card h2 .alfa-content{
     padding-left: 16px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 20ch;
+    display: inline-block;
 }
 .alfa-sidebar-main-card .alfa-PT-E-RS-labels{
     display: inline-block;
@@ -1849,6 +1859,20 @@ p.alfa-test-card-bottom-content{
         font-size: 1.4rem;
     }
 }
+@media (max-width: 768px) {
+    .alfa-PT-sidebar .navbar-side{
+        width: 100%;
+    }
+    .alfa-sidebar-container{
+        padding: 0;
+    }
+    .alfa-sidebar-nav.nav-pills .nav-link{
+        margin-right: 4px;
+    }
+    .alfa-sidebar-gotoTop{
+        margin-top: 20px;
+    }
+}
 .alfa-PT-sidebar .navbar-side-item:hover {
       background-color: #fff;
 }  
@@ -1973,6 +1997,28 @@ p.alfa-test-card-bottom-content{
     .alfa-SRT-resolution img, .alfa-SRT-micAndspecker img{
         max-width: 260px;
         min-width: 260px;
+    }
+    .alfa-PT-E-btns .btn.alfa-PT-E-submit,
+    .alfa-PT-E-btns .btn.alfa-PT-E-restart,
+    .alfa-PT-E-btns .btn.alfa-PT-E-viewscore,
+    .alfa-PT-E-btns .btn.alfa-PT-E-dictionary{
+        font-size: 14px;
+    }
+    .alfa-PT-E-btns .btn.alfa-PT-E-submit,
+    .alfa-PT-E-btns .btn.alfa-PT-E-restart{
+        margin-bottom: 5px;
+    }
+    .alfa-PT-E-btns .btn.alfa-PT-E-viewscore{
+        padding: 7px 17px;
+    }
+    .alfa-PT-E-btns .btn.btn-dark{
+        margin-right: 6px;
+    }
+    .alfa-PT-E-select{
+        margin: 0 4px;
+    }
+    .alfa-PT-E-myscore .card-header .nav .nav-link{
+        margin-right: 10px;
     }
 }
 @media (max-width: 575.98px) { 
